--- a/internals/btcusd.html
+++ b/internals/btcusd.html
@@ -65,7 +65,7 @@
     </b></a>
        
     </h1>
-   <img src="../img/btcusd.jpg" alt="">
+   <img src="../img/WhatsApp Image 2025-05-31 at 12.40.56_b1fee304.jpg" alt="">
    <p><b>note:</b>apply <b>risk management</b></p>
 
    <!-- <div style="width: 400px; height: 300px;">
