--- a/internals/usdjpy.html
+++ b/internals/usdjpy.html
@@ -64,23 +64,23 @@
     </b></a>
       
     </h1>
-   <img src="../img/usdjpy.jpg" alt="">
-   <p><b>note:</b>apply <b>risk management</b></p>
+<!--    <img src="../img/usdjpy.jpg" alt="">
+   <p><b>note:</b>apply <b>risk management</b></p> -->
    
       <!-- <div style="width: 400px; height: 300px;">
     <video id="myVideo" width="100%" height="100%" controls>
         <source src="../VID/lv_0_20250526204536.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video> -->
-   <p>
+<!--    <p>
     entry:  147.931 <br>
     tp:  148.829 <br>
     sl:   147.708  <br>
     at every profit of <b>10pips </b>set <b>break even.
-   </p>
+   </p> -->
 
-   <!-- <h5>
+   <h5>
     <i style="color: red;">"</i>  NO UPDATES <i style="color: red;">"</i>
-</h5> -->
+</h5>
 </body>
 </html>
