--- a/internals/xauusd.html
+++ b/internals/xauusd.html
@@ -71,8 +71,8 @@
         XAUUSD 
     </b></a>
     </h1> 
-   <img src="../img/xauusd.jpg" alt="">
-   <p><b>note:</b>apply <b>risk management</b></p>
+<!--    <img src="../img/xauusd.jpg" alt="">
+   <p><b>note:</b>apply <b>risk management</b></p> -->
 
       <!-- <div style="width: 400px; height: 300px;">
     <video id="myVideo" width="100%" height="100%" controls>
@@ -82,15 +82,15 @@
 
 
 
-   <p>
+<!--    <p>
     entry:  3,343.02 <br>
     tp:  3,318.99 <br>
     sl:   3,351.01 <br>
     at every profit of <b>10pips </b>set <b>break even.
-    </p></b>
+    </p></b> -->
 
-    <!-- <h5>
+    <h5>
         <i style="color: red;">"</i>  NO UPDATES <i style="color: red;">"</i>
-    </h5> -->
+    </h5>
 </body>
 </html>
